<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Radio">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="@color/purple_700"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/titleRadio"/>

    <TextView
        android:id="@+id/textViewIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:textSize="17dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/introR" />

    <RadioGroup
        android:id="@+id/rgSifat"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp">


        <RadioButton
            android:id="@+id/RdBaik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdBaik" />

        <RadioButton
            android:id="@+id/rdPintar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdPintar" />

        <RadioButton
            android:id="@+id/rdJail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdJail" />

        <RadioButton
            android:id="@+id/rdJahat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdJahat" />

        <RadioButton
            android:id="@+id/rdNakal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdNakal" />

    </RadioGroup>

    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/btnPilihan" />


</LinearLayout>